--- a/css/trainmap.css
+++ b/css/trainmap.css
@@ -1,4 +1,4 @@
-body{
+﻿body{
 	font-family: "微软雅黑";
 	font-size: 12px;
 }
@@ -19,5 +19,10 @@ body{
 
 .timeDigitSmall{
 	font-size: 8px;
+	-webkit-text-size-adjust:none;
+}
+
+.timeDigit{
+	font-size: 10px;
 	-webkit-text-size-adjust:none;
 }
