* 自动标线延长 * bugs fixed

--- a/css/trainmap.css
+++ b/css/trainmap.css
@@ -23,6 +23,12 @@
 }
 
 .timeDigit{
+	font-size: 9px;
+	-webkit-text-size-adjust:none;
+}
+
+
+.TrainNo{
 	font-size: 10px;
 	-webkit-text-size-adjust:none;
 }
